Add JSON readability

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -34,10 +34,10 @@ button {
 }
 
 .dinoText {
-  width: 800px;
+  width: 600px;
   color: $bluegreen;
   font-size: 18px;
   line-height: 23px;
   margin-bottom: 10px;
-  text-align: justify;
+  // text-align: justify;
 }
